# vectorbtworkspace

./: .gitignore  DATA_FORMAT_CONVENTION.md  INDICATOR_PLOTTING_SUMMARY.md  README.md  REFACTORING_STATUS.md  STYLE_GUIDE.md  TODO.MD  VECTORIZATION_GUIDE.md  __init__.py  analysis_pipeline.py  backtest.py  base.py  cli_client.py  core_components.py  data_manager.py  debug_path_mc.py  holdon.py  main.py  metrics.py  monte_carlo_path.py  optimizer.py  plotter.py  plotter_add.py  pyproject.toml  qqqopt.py  requirements.txt  run_tests.py  setup.py  strategy_registry.py  strategy_test_results_20251026_024805.csv  strategy_test_results_20251124_030813.csv  test_all_strategies.py  test_path_mc_robust.py  test_results.txt  test_time_range.py  test_visualization.py  trading_system.py  ultra_compact_fusion.py  validation.py  vectoragent.py  (+2 more)
.agent/: INTELLISENSE_VECTORBT.md  SUMMARY_COMPLETE.md  WALKFORWARD_ANALYSIS.md  code_quality_audit.md
config/: CONFIG_GUIDE.md  bollinger_kalman.yaml  chop.yaml  chop_freqtrade.json  data_sources.yaml  diversified_hold.yaml  donchian.yaml  ema_rsi_trend.yaml  grid.yaml  grid_example_full.yaml  kalman_ma.yaml  lti.yaml  momentum.yaml  orb.yaml  risk_parity.yaml  risk_premia.yaml  rsi.yaml  sol_btc_stat_arb.yaml  stddev_grid.yaml  supertrend_grid.yaml  tdi.yaml  vectorbt.yaml  vol_breakout.yaml
core/: __init__.py  analysis.py  backtest.py  base.py  config.py  data_loader.py  indicators.py  io.py  metrics.py  monte_carlo.py  optimizer.py  portfolio.py  trading_system.py  visualization.py  walkforward.py
docs/: INDICATOR_PLOTTING.md  (+1 more)
(+85 files in other folders)
